--- a/conda.recipe/ginjinn-gpu-pt16_cu102_linux/meta.yaml
+++ b/conda.recipe/ginjinn-gpu-pt16_cu102_linux/meta.yaml
@@ -28,6 +28,7 @@ requirements:
     - mock
     - imantics
     - scikit-learn
+    - tqdm
 
 build:
   string: pt16_cu102_py{{ python | replace(".", "") }}{{ '_nightly' if environ.get('NIGHTLY') else '' }}
