--- a/conda.recipe/ginjinn-gpu-pt16_cu92_linux/meta.yaml
+++ b/conda.recipe/ginjinn-gpu-pt16_cu92_linux/meta.yaml
@@ -26,6 +26,7 @@ requirements:
     - mock
     - imantics
     - scikit-learn
+    - tqdm
 
 build:
   string: pt16_cu92_py{{ python | replace(".", "") }}{{ '_nightly' if environ.get('NIGHTLY') else '' }}
