--- a/conda.recipe/ginjinn-gpu-pt17_cu101_linux/meta.yaml
+++ b/conda.recipe/ginjinn-gpu-pt17_cu101_linux/meta.yaml
@@ -27,6 +27,7 @@ requirements:
     - mock
     - imantics
     - scikit-learn
+    - tqdm
 
 build:
   string: pt17_cu101_py{{ python | replace(".", "") }}{{ '_nightly' if environ.get('NIGHTLY') else '' }}
