--- a/conda.recipe/ginjinn-gpu-pt16_cu102_linux/meta.yaml
+++ b/conda.recipe/ginjinn-gpu-pt16_cu102_linux/meta.yaml
@@ -15,6 +15,7 @@ requirements:
     - torchvision==0.7.0
     - cudatoolkit=10.2
     - pip
+    - pytest
 
   run:
     - python {{ python }}
@@ -29,6 +30,11 @@ requirements:
     - imantics
     - scikit-learn
     - tqdm
+    - matplotlib
+    - numpy
+    - pyyaml
+    - requests
+    - scipy
 
 build:
   string: pt16_cu102_py{{ python | replace(".", "") }}{{ '_nightly' if environ.get('NIGHTLY') else '' }}
