--- a/conda.recipe/ginjinn-gpu-pt18_cu101_linux/meta.yaml
+++ b/conda.recipe/ginjinn-gpu-pt18_cu101_linux/meta.yaml
@@ -14,6 +14,7 @@ requirements:
     - torchvision==0.9.0
     - cudatoolkit=10.1
     - pip
+    - pytest
 
   run:
     - python {{ python }}
@@ -28,6 +29,11 @@ requirements:
     - imantics
     - scikit-learn
     - tqdm
+    - matplotlib
+    - numpy
+    - pyyaml
+    - requests
+    - scipy
 
 build:
   string: pt18_cu101_py{{ python | replace(".", "") }}{{ '_nightly' if environ.get('NIGHTLY') else '' }}
