--- a/.github/workflows/pt17_cu101_manual.yml
+++ b/.github/workflows/pt17_cu101_manual.yml
@@ -37,13 +37,14 @@ jobs:
       - run: which python
       - name: Install dependencies
         run: |
-          conda install pytest conda-build anaconda-client pip pytest-cov
+          conda install pytest conda-libmamba-solver anaconda-client pip pytest-cov
+          conda install boa -c conda-forge
       - name: Build and publish GinJinn
         run: |
           conda config --set anaconda_upload yes
-          conda-build conda.recipe/${{ matrix.ginjinn-distribution }} --token ${{ secrets.ANACONDA_TOKEN }} --user AGOberprieler --variants "{'python': ['${{ matrix.python-version }}']}"
+          conda mambabuild conda.recipe/${{ matrix.ginjinn-distribution }} --token ${{ secrets.ANACONDA_TOKEN }} --user AGOberprieler --variants "{'python': ['${{ matrix.python-version }}']}"
       - name: Install GinJinn from Anaconda cloud
-        run: conda install -c conda-forge -c pytorch -c agoberprieler ginjinn2 pytorch=1.7.0 cudatoolkit=10.1
+        run: conda install -c conda-forge -c pytorch -c agoberprieler ginjinn2 pytorch=1.7.0 cudatoolkit=10.1 --experimental-solver=libmamba
       - name: Test with pytest
         run: |
           pytest --cov=./ginjinn/ --cov-report=xml
