--- a/.github/workflows/pt16_cu101_manual.yml
+++ b/.github/workflows/pt16_cu101_manual.yml
@@ -44,7 +44,10 @@ jobs:
           conda config --set anaconda_upload yes
           conda mambabuild conda.recipe/${{ matrix.ginjinn-distribution }} --token ${{ secrets.ANACONDA_TOKEN }} --user AGOberprieler --variants "{'python': ['${{ matrix.python-version }}']}"
       - name: Install GinJinn from Anaconda cloud
-        run: conda install -c conda-forge -c pytorch -c agoberprieler ginjinn2 pytorch=1.6.0 cudatoolkit=10.1 --experimental-solver=libmamba
+        run: |
+          conda create -n gj
+          conda activate gj
+          conda install -c conda-forge -c pytorch -c agoberprieler ginjinn2 pytorch=1.6.0 cudatoolkit=10.1 --experimental-solver=libmamba
       - name: Test with pytest
         run: |
           pytest --cov=./ginjinn/ --cov-report=xml
