--- a/.github/workflows/pt18_cu111_manual.yml
+++ b/.github/workflows/pt18_cu111_manual.yml
@@ -1,14 +1,14 @@
 name: Manual Build pytorch1.8 cuda11.1
 
-on: 
+on:
   workflow_dispatch:
     inputs:
       logLevel:
-        description: 'Log level'     
+        description: "Log level"
         required: true
-        default: 'warning'
+        default: "warning"
       tags:
-        description: 'Test pytorch1.8 cuda11.1 build'
+        description: "Test pytorch1.8 cuda11.1 build"
 
 jobs:
   build:
@@ -41,7 +41,7 @@ jobs:
           conda config --set anaconda_upload yes
           conda mambabuild conda.recipe/${{ matrix.ginjinn-distribution }} --token ${{ secrets.ANACONDA_TOKEN }} --user AGOberprieler --variants "{'python': ['${{ matrix.python-version }}']}"
       - name: Install GinJinn from Anaconda cloud
-        run: conda install -c conda-forge -c pytorch -c agoberprieler ginjinn2 pytorch=1.8.0 cudatoolkit=11.1 --experimental-solver=libmamba
+        run: conda install -c conda-forge -c pytorch -c agoberprieler ginjinn2 pytorch=1.8.0 cudatoolkit=11.1
       - name: Test with pytest
         run: |
           pytest --cov=./ginjinn/ --cov-report=xml
