bugfix (numpy version)

--- a/conda.recipe/ginjinn-gpu-pt16_cu102_linux/meta.yaml
+++ b/conda.recipe/ginjinn-gpu-pt16_cu102_linux/meta.yaml
@@ -31,7 +31,7 @@ requirements:
     - scikit-learn
     - tqdm
     - matplotlib
-    - numpy
+    - numpy<=1.20.0
     - pyyaml
     - requests
     - scipy
