--- a/conda.recipe/ginjinn-gpu-pt17_cu92_linux/meta.yaml
+++ b/conda.recipe/ginjinn-gpu-pt17_cu92_linux/meta.yaml
@@ -29,7 +29,7 @@ requirements:
     - scikit-learn
     - tqdm
     - matplotlib
-    - numpy
+    - numpy<=1.20.0
     - pyyaml
     - requests
     - scipy
