--- a/.github/workflows/pt16_cu101_manual_nightly.yml
+++ b/.github/workflows/pt16_cu101_manual_nightly.yml
@@ -1,4 +1,4 @@
-name: Manual Nightly Build pytorch1.6 cuda10.1
+name: Manual Nightly Build pytorch1.6 cuda10.1 test
 
 on:
   workflow_dispatch:
@@ -16,6 +16,9 @@ on:
 jobs:
   build:
     runs-on: ${{ matrix.os }}
+    defaults:
+      run:
+        shell: bash -l {0}
     strategy:
       matrix:
         os: [ubuntu-latest]
@@ -27,25 +30,27 @@ jobs:
       NIGHTLY: true
     name: Python ${{ matrix.python-version }} example
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Setup conda
-        uses: s-weigand/setup-conda@v1
+        uses: conda-incubator/setup-miniconda@v2
         with:
-          update-conda: true
+          installer-url: https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-Linux-x86_64.sh
+          use-mamba: true
           python-version: ${{ matrix.python-version }}
-          conda-channels: anaconda, conda-forge, pytorch
-      - run: conda --version
-      - run: which python
+          use-only-tar-bz2: true
+          auto-update-conda: true
+          channels: conda-forge, pytorch
+      - run: mamba --version
+      - run: which python3
       - name: Install dependencies
         run: |
-          conda install pytest conda-libmamba-solver anaconda-client pip pytest-cov
-          conda install boa -c conda-forge
-      - name: Build and publish GinJinn
+          mamba install boa pytest anaconda-client pip pytest-cov conda-verify
+      - name: Build and publish GinJinn2
         run: |
-          conda config --set anaconda_upload yes
+          mamba config --set anaconda_upload yes
           conda mambabuild conda.recipe/${{ matrix.ginjinn-distribution }} --token ${{ secrets.ANACONDA_TOKEN }} --user AGOberprieler --variants "{'python': ['${{ matrix.python-version }}']}" --label nightly
-      - name: Install GinJinn from Anaconda cloud
-        run: conda install -c conda-forge -c pytorch -c agoberprieler/label/nightly ginjinn2 pytorch=1.6.0 cudatoolkit=10.1
+      - name: Install GinJinn2 from Anaconda cloud
+        run: mamba install -c agoberprieler/label/nightly ginjinn2 pytorch=1.6.0 cudatoolkit=10.1
       - name: Test with pytest
         run: |
           pytest --cov=./ginjinn/ --cov-report=xml
@@ -58,3 +63,4 @@ jobs:
           env_vars: OS,PYTHON
           name: codecov-umbrella
           fail_ci_if_error: true
+          
