--- a/conda.recipe/ginjinn-gpu-pt18_cu102_linux/meta.yaml
+++ b/conda.recipe/ginjinn-gpu-pt18_cu102_linux/meta.yaml
@@ -30,7 +30,7 @@ requirements:
     - scikit-learn
     - tqdm
     - matplotlib
-    - numpy<=1.20.0
+    - numpy==1.20.0
     - pyyaml
     - requests
     - scipy
